--- a/package.json
+++ b/package.json
@@ -8,14 +8,12 @@
     "start": "node build/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/app.js\""
-    
-    
-   
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
